nav bar no longer adds extra white space to the right

--- a/src/navbar.css
+++ b/src/navbar.css
@@ -17,7 +17,7 @@
   text-align: center;
   position: relative;
   float: left;
-  top: 68%;
+  top: 73%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: 'Quicksand', sans-serif;
@@ -105,8 +105,8 @@ body {
 #menuToggle
 {
   display: block;
-  position: relative;
-  top: 50px;
+  position: absolute;
+  top: 65px;
   left: 50px;
   
   z-index: 1;
@@ -220,7 +220,7 @@ body {
 
 #menu li
 {
-  padding: 10px 0;
+  padding: 5px 0;
   font-size: 22px;
 }
 
